# hochwasserportal

./: LICENSE  README.md  hacs.json  info.md  pegel.md  pyproject.toml  requirements.txt  update_pegel_list.py
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: auto_assign.yml  hassfest.yml  python_testing.yml  update_pegel.yml
custom_components/hochwasserportal/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  string.json
custom_components/hochwasserportal/lhp_api/: __init__.py  api_utils.py  bb_api.py  be_api.py  bw_api.py  by_api.py  hb_api.py  he_api.py  hh_api.py  mv_api.py  ni_api.py  nw_api.py  rp_api.py  sh_api.py  sl_api.py  sn_api.py  st_api.py  th_api.py
custom_components/hochwasserportal/translations/: de.json  en.json
