[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hochwasserportal"
version = "1.0.8"
authors = [
    { name="stephan192", email="stephan192@outlook.com" },
]
description = "Home Assistant integration for the Länderübergreifendes Hochwasser Portal (LHP)"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["lhp", "hochwasser", "hochwasserportal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "homeassistant>=2024.2.5",
    "lhpapi>=1.0.10",
    "voluptuous>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/stephan192/hochwasserportal"
Issues = "https://github.com/stephan192/hochwasserportal/issues"

[tool.hatch.build]
exclude = [
    "/.github",
    "/tests",
]

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = "homeassistant"
combine_as_imports = true

[tool.pylint.main]
recursive = true

[tool.pylint."messages control"]
disable = [
    "unexpected-keyword-arg",
    "abstract-method",
]